<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.advert.AdvertActivity">

    <LinearLayout
        android:id="@+id/linearTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="Post Type:"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_lost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/d_50"
                android:buttonTint="@color/black"
                android:checked="true"
                android:text="Lost"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <RadioButton
                android:id="@+id/radio_found"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/d_50"
                android:buttonTint="@color/black"
                android:text="Found"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="@id/linearTop"
        app:layout_constraintStart_toStartOf="@id/linearTop"
        app:layout_constraintTop_toBottomOf="@id/linearTop">

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_name"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/text_border"
            android:inputType="text"
            android:padding="5dp"
            tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textViewPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_phone"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/text_border"
            android:ems="10"
            android:inputType="phone"
            android:padding="5dp"
            tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TextFields" />

        <TextView
            android:id="@+id/textViewDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_description"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/text_border"
            android:ems="10"
            android:inputType="text"
            android:padding="5dp"
            tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_Date"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/text_border"
            android:inputType="text"
            android:padding="5dp"
            tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TextFields" />

        <TextView
            android:id="@+id/textViewLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_Location"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextLocation"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/text_border"
            android:inputType="textPersonName"
            android:padding="5dp"
            tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/sliver"
        android:padding="10dp"
        android:text="@string/txt_save"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/linearBottom" />

</androidx.constraintlayout.widget.ConstraintLayout>